logs/uso_de_ia/1.2.6/prompt.md
Realizar analisis de correlación y colinealidad (sections/S01-Metodologia_EDA_Analisis/1_2_EDA/code/05-analisis_correlaciones): Debe incluir correlación y colinealidad entre los predictores candidatos.

Transversal: 
1. Guardar datasets de staging en data/staging/S01/ para que estos sean reutilizados por futuros procesos que los requieran. Guarda la descripción detallada de cada dataset en docs/staging_data.md
2.Los plots deben incluirse en su respectviva carpeta de results, para este proceso correspondiente es 'sections/S01-Metodologia_EDA_Analisis/1_2_EDA/results/imgs'
3. Al finalizar incluye los hallazgos preliminares de este proceso en 'sections/S01-Metodologia_EDA_Analisis/1_2_EDA/results/Insights_EDA.md' para mi revisión.
4. Diligencia logs/uso_de_ia/1.2.6/output.md como logs del proceso que realizaste.ˆ